[gd_scene load_steps=12 format=2]

[ext_resource path="res://nodes/UI/HUD/Elements/Health_Bar_Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/UI/Pause_Menu/UI_Pause_Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/UI/Debug.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/UI/HUD/HUD_Control.gd" type="Script" id=4]
[ext_resource path="res://fonts/7x10_font.tres" type="BitmapFont" id=5]

[sub_resource type="Shader" id=29]
code = "shader_type canvas_item;

uniform float color_palette_modifier : hint_range(0.0, 1.0) = 0.0;

uniform int numberOfColors : hint_range(1, 3);
uniform vec4 C1 : hint_color;
uniform vec4 C2 : hint_color;
uniform vec4 C3 : hint_color;


void fragment(){
	vec4 referenceColors[12];
	referenceColors[0] = C1;
	referenceColors[1] = C2;
	referenceColors[2] = C3;

	
	vec4 textureColor = texture(TEXTURE, UV);
	

	COLOR.rgb = mix(textureColor.rgb,referenceColors[int(floor(textureColor.r * float(numberOfColors)))].rgb,color_palette_modifier);
	COLOR.a = textureColor.a;

}"

[sub_resource type="ShaderMaterial" id=30]
resource_local_to_scene = true
shader = SubResource( 29 )
shader_param/color_palette_modifier = 0.0
shader_param/numberOfColors = 3
shader_param/C1 = Color( 0.34552, 0.796875, 0.766275, 1 )
shader_param/C2 = Color( 0.556863, 0.901961, 0.878431, 1 )
shader_param/C3 = Color( 0.803922, 0.945098, 1, 1 )

[sub_resource type="Animation" id=1]
resource_name = "HideHud"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Health_Bar:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boss_Health_bar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hud_Hidden"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Health_Bar:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boss_Health_bar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Health_Bar:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boss_Health_bar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "ShowHud"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Health_Bar:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boss_Health_bar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 4 )

[node name="Debug_Shit" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -88.0
margin_right = 338.0
rect_pivot_offset = Vector2( 533, 31 )

[node name="Boss_Health_bar" type="Control" parent="."]
margin_left = 313.0
margin_top = 250.0
margin_right = 353.0
margin_bottom = 290.0

[node name="Health_Bar" parent="." instance=ExtResource( 1 )]
material = SubResource( 30 )
margin_left = 26.0
margin_top = 25.0
margin_right = 66.0
margin_bottom = 65.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HideHud = SubResource( 1 )
anims/Hud_Hidden = SubResource( 2 )
anims/RESET = SubResource( 31 )
anims/ShowHud = SubResource( 3 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_right = 426.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notif_Holder" type="Control" parent="."]
margin_top = -1.0
margin_right = 40.0
margin_bottom = 39.0

[node name="UI_Pause_Menu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="timer_text" type="Label" parent="."]
visible = false
margin_left = 100.0
margin_top = -18.0
margin_right = 220.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 5 )
text = "0:00"
align = 1
uppercase = true
